[package]
name = "bishram"
version = "1.0.0"
edition = "2021"
description = "A mindful break ritual for deep focus"

[build-dependencies]
tauri-build = { version = "2", features = [] }
image = "0.24"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }




